# b4challenge

./: README.md  shellScript.md
docker/: README.md  result-task1-2.txt
docker/task3/: Dockerfile  result.txt
docker/task4/: Dockerfile  docker-compose.yml  result.txt
docker/task5/: Dockerfile.client  Dockerfile.server  client.py  docker-compose.yml  requirements.txt  server.py
linux/: README.md  result.txt  task3.sh
ros/: Dockerfile  README.md  README_MODIFICATION_REPORT.md  SETUP_COMPLETE.md  docker-compose-multi.yaml  docker-compose.yaml  start_macos.sh  test_packages.sh  test_ros2.sh  update_readme_status.sh
ros/src/: README.md
ros/src/my_first_package/: package.xml  setup.py
ros/src/my_python_package/: package.xml  setup.py
ros/src/task01_02_turtlesim/: README.md
ros/src/task03_package_creation/: README.md
ros/src/task04_basic_pubsub/: README.md  package.xml  setup.cfg  setup.py
ros/src/task04_basic_pubsub/resource/: task04_basic_pubsub
ros/src/task04_basic_pubsub/task04_basic_pubsub/: publisher.py  simple_publisher.py  simple_subscriber.py  subscriber.py
ros/src/task05_student_info_pubsub/: README.md  package.xml  setup.py
ros/src/task05_student_info_pubsub/resource/: student_info_pubsub
ros/src/task05_student_info_pubsub/student_info_pubsub/: student_publisher.py  student_subscriber.py
ros/src/task05_student_msgs/: CMakeLists.txt  README.md  package.xml
ros/src/task05_student_msgs/msg/: StudentArray.msg  StudentInfo.msg
ros/src/task06_student_array_pubsub/: README.md  package.xml  setup.py
ros/src/task06_student_array_pubsub/resource/: student_array_pubsub
ros/src/task06_student_array_pubsub/student_array_pubsub/: student_array_publisher.py  student_array_subscriber.py
ros/src/task07_bag/: README_new.md
ros/src/task08_launch_example/: EXECUTION_REPORT.md  README_new.md  execution_log.txt  package.xml  setup.py
ros/src/task08_launch_example/launch/: basic_pubsub_launch.py  image_pubsub_launch.py  student_pubsub_launch.py
ros/src/task09_image_pubsub/: EXECUTION_REPORT.md  README_new.md  execution_log.txt  package.xml  setup.py
ros/src/task09_image_pubsub/image_pubsub/: image_publisher.py  image_subscriber.py
ros/src/task11_multi_container/: README_new.md
