[metadata]
name = basic_pubsub
version = 0.0.0
description = Basic publisher and subscriber example
maintainer = student
maintainer_email = student@example.com
license = Apache License 2.0

[options]
install_requires = setuptools

[options.entry_points]
console_scripts =
        publisher = basic_pubsub.publisher:main
        subscriber = basic_pubsub.subscriber:main
