<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>student_array_pubsub</name>
  <version>0.0.0</version>
  <description>Student array publisher and subscriber</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>Apache License 2.0</license>

  <!-- 参考資料「Creating custom msg and srv files」に基づく依存関係設定 -->
  <depend>rclpy</depend>
  <depend>task05_student_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
