<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_example</name>
  <version>0.0.0</version>
  <description>Launch file examples for ROS2</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>Apache License 2.0</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>basic_pubsub</depend>
  <depend>student_info_pubsub</depend>
  <depend>student_array_pubsub</depend>
  <depend>image_pubsub</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
